--- a/index.html
+++ b/index.html
@@ -99,9 +99,86 @@
         </div>
 
     </section>
-    <!-- some fact -->
-
+    <!-- some fact  section-->
+    <section>
+        <div>
+        <h2 class="fact-heading">Some Facts</h2>
+         <p class="fact-description">There are some important fact about us you must know
+            <br> about that it also necessary for you also.We will be very glad to know about this</p>    
+    </div>
+      <div class="factor">
+        <div class="square">
+            <img src="img/ribon.png" alt="ribon">
+            <h2 class="square-heading">54</h2>
+            <p class="square-description">Awards Winnings</p>
+        </div>
+        <div class="square">
+            <img src="img/projects.png" alt="peoject">
+            <h2 class="square-heading">1458</h2>
+            <p class="square-description">Projects-Finished</p>
+        </div>
+        <div class="square">
+            <img src="img/customers.png" alt="customer">
+            <h2 class="square-heading">590</h2>
+            <p class="square-description">Client Worked</p>
+        </div>
+        <div class="square">
+            <img src="img/email.png" alt="email">
+            <h2 class="square-heading">22578</h2>
+            <p class="square-description">Email send</p>
+        </div>
+      </div>
+    </section>
+    <!-- sponsor section -->
+    <section>
+        <h2 class="sponspors-heading">Our Sponspors</h2>
+        <p class="sponspors-description">We are really glad to tell you that the biggest team of 
+            <br> google figma amzon spotify or other team whom are supporting us and sponspors.Thank you</p>
+    <div class="spons-icon">
+        <div><img src="img/spotify.png" alt="spotify"></div>
+        <div><img src="img/figma.png" alt="figma"></div>
+        <div><img src="img/google.png" alt="google"></div>
+        <div><img src="img/amazon.png" alt="amazon"></div>
+        <div><img src="img/telerama.png" alt="telerama"></div>
+    </div>
+<div class="play-protect">All rights reserved copyright@2030 startup landing page design</div>
+        </section>
     </main>
+        <footer>
+            <h2 class="contact-title">Contact Us</h2>
+    <section class="contact">
+        
+        <div>
+            <h3 class="contact-heading">Let's connect</h3>
+            <p class="contact-description">Please fill outv the form to contact with me which is attach in thia section or call between 9.00am and 8.00pm..ET,monday throgh friday</p>
+            <a href="">
+                <img src="img/facebook.png" alt="facebook">
+            </a>
+            <a href="">
+                <img src="img/instagram.png" alt="my instagram">
+            </a>
+            <a href="">
+                <img src="img/twiter.png" alt="my twiter">
+            </a>
+            <a href="">
+                <img src="img/whatsapp.png" alt="my whats app">
+            </a>
+        </div>
+        <div>
+            <h3 class="section-title">Let's messege Us</h3>
+            <form action="">
+                <input type="text" placeholder="your name" required>
+                <input type="email" name="" id="" placeholder="your email" required>
+                <textarea name="" id="" cols="30" rows="10" placeholder="messege"></textarea>
+                <input class="btn-primary" type="submit" value="submit">
+            </form>
+        </div>
+    </section>
+
+
+
+</footer>
+</html>
     
 </body>
 </html>
